--- a/css/estilo.css
+++ b/css/estilo.css
@@ -70,6 +70,9 @@ ___________________________*/
 	background: #fff;
 	color: #000;
 }
+.carousel-control-next, .carousel-control-prev{
+	width: 5%;
+}
 /* Estrutura de conteúdos
 ___________________________*/
 .caixa{
